--- a/css/style.css
+++ b/css/style.css
@@ -73,24 +73,74 @@ a {
 	width: 100%;
 	position: relative;
 	padding: 25px 0px;
+
+
+	.navbar {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+		padding: 0;
+		margin: 0;
+	}
+
+	
+.navbar .navbar-brand {
+    order: -1;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+	
 }
 .bg-dark {
 	background-color: #fff!important;
 	border-bottom: 1px solid #eee;
 }
-#navbarResponsive {
+
+
+//*#navbarResponsive {
 	z-index: 999;
-	position: absolute;
-	left: 50%;
+	position: relative;
+	left: 20%;
 	top: 105px;
-	transform: translateX(-50%);
+	transform: translateX(-20%);
 }
+*//
+
+
+#navbarResponsive {
+    z-index: 99999;
+    position: left;
+    width: 100%;
+    text-align: center;
+	margin: 0, auto;
+	left: 0;
+	justify-content: center;
+    background-color: rgba(250, 250, 250, 0.95);
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 1);
+}
+
+#navbarResponsive .navbar-nav .nav-link {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+	margin: 0 20px;
+}
+
+
+
 .navbar-dark .navbar-nav .nav-item {
-	margin: 0px 15px;
+	margin-top: 0px 15px;
 }
+
+
+
+
 .navbar-dark .navbar-nav .nav-link {
-	text-transform: uppercase;
-	font-size: 15px;
+	margin-right: 3%;
+	font-size: 16px;
 	font-weight: 700;
 	color: #1e1e1e;
 	transition: all 0.5s;
@@ -137,7 +187,7 @@ a {
 	background-position: center center;
 }
 .banner .caption {
-	background-color: rgba(250,250,250,0.9);
+	background-color: rgba(250,250,250, 1);
 	padding: 30px;
 	max-width: 450px;
 }
@@ -681,28 +731,84 @@ h1{
 	border: none;
 }
 
-/* Responsive Style */
+
+
+	/* Estilos do menu responsivo */
 @media (max-width: 991px) {
+    .navbar-collapse {
+        background-color: rgba(0, 0, 0, 0.8);
+        position: relative;
+        top: 100%; /* Coloca o menu abaixo do cabeçalho */
+        left: 0;
+        width: 100%;
+        z-index: 1000; /* Garante que o menu esteja acima do conteúdo */
+    }
+    .navbar-nav {
+        flex-direction: column; /* Mostra os itens em uma coluna */
+        align-items: center; /* Centraliza os itens verticalmente */
+        width: 100%;
+    }
+    .nav-item {
+        margin-bottom: 6px; /* Adicione espaço entre os itens */
+    }
+
+	#navbarResponsive {
+        position: relative;
+        top: 0;
+    }
+    
+	.banner {
+        padding-top: 280px; 
+        margin-top: 600px; 
+    }
+
+}
+
 
 	.banner {
 		border-top: none;
 		margin-top: 0px;
 	}
 	.navbar .navbar-brand {
-		width: auto;
+		order: -1;
+		margin-bottom: 20px;
+		display: flex; 
+		justify-content: center;
+		align-items: center;
 	}
+	
+
 	.navbar:after {
 		display: none;
 	}
+	
 	#navbarResponsive {
-	    z-index: 99999;
-	    position: absolute;
-	    top: 96px;
-	    width: 100%;
-	    text-align: center;
-	    background-color: rgba(250,250,250,0.95);
-	    box-shadow: 0px 10px 10px rgba(0,0,0,0.1);
+		z-index: 99999;
+		position: absolute;
+		width: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		top: 96px;
+		background-color: rgba(250, 250, 250, 1);
+		box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
 	}
+
+	.navbar-nav {
+		display: flex;
+		align-items: center; /* Centraliza verticalmente os itens do menu */
+		margin: 0;
+		padding: 0;
+		list-style: none;
+	}
+	
+	.nav-item {
+		margin: 0 15px; /* Espaçamento entre os itens do menu */
+	}
+	
+
+
+
 	.navbar-dark .navbar-nav .nav-item {
 		border-bottom: 1px solid #eee;
 	}
@@ -736,9 +842,37 @@ h1{
 		margin-top: 0px;
 	}
 
-}
 
-@media (max-width: 767px) {
+
+	@media (max-width: 767px) {
+		.navbar-collapse {
+			background-color: rgba(0, 0, 0, 0.8);
+			position: relative;
+			top: %; /* Coloca o menu abaixo do cabeçalho */
+			left: 0;
+			width: 100%;
+			z-index: 1000; /* Garante que o menu esteja acima do conteúdo */
+		}
+		.navbar-nav {
+			flex-direction: column; /* Mostra os itens em uma coluna */
+			align-items: center; /* Centraliza os itens verticalmente */
+			width: 100%;
+	
+		#navbarResponsive {
+			position: relative;
+			top: 0;
+		}
+		
+		.banner {
+			padding: 80px; 
+			margin: 20px; 
+		}
+	
+	}
+	
+	}
+
+//*@media (max-width: 767px) {
 
 	.subscribe-form .main-content form input.button {
 		margin-top: 20px;
@@ -749,9 +883,29 @@ h1{
 	} 
 
 }
+*//
+
+.invalid {
+    border: 2px solid #f00;
+}
 
 .section{
 	padding-top: 4%;
 	padding-bottom: 4%;
 
 }
+
+.card-spacing {
+    margin: 10px;
+}
+
+.min-card-size img {
+		min-width: 250px; /* Tamanho mínimo em pixels */
+		min-height: 250px; /* Tamanho mínimo em pixels */
+		max-width: 100%; /* Evita que as imagens se estiquem além do tamanho máximo do cartão */
+		max-height: 100%; /* Evita que as imagens se estiquem além do tamanho máximo do cartão */
+		object-fit: cover; /* Redimensiona as imagens para preencher o espaço do cartão mantendo a proporção */
+}
+
+
+
