--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,6 +18,8 @@ a {
 }
 
 .main-button a {
+
+	a {
 	background-color: #3a8bcd;
 	border-radius: 5px;
 	padding: 10px 15px;
@@ -29,24 +31,31 @@ a {
 	letter-spacing: 0.4px;
 	text-decoration: none;
 	transition: all 0.5s;
-}
-.main-button a:hover {
+
+a:hover {
 	opacity: 0.7;
+}
+
+}
+
 }
 .section-heading {
 	margin-top: 80px;
 	margin-bottom: 40px;
-}
-.section-heading .line-dec {
-	width: 30px;
-	height: 5px;
-	background-color: #3a8bcd;
-}
-.section-heading h1 {
+
+	.line-dec {
+		width: 30px;
+		height: 5px;
+		background-color: #3a8bcd;
+	}
+	
+	.h1 {
 	font-size: 22px;
 	font-weight: 700;
 	color: #1e1e1e;
 	margin-top: 15px;
+	}
+	
 }
 
 /* Pre Header Style */
